# chat_api_test

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  load_test_data.py  main.py  prestart.py  pyproject.toml  readme.MD
alembic/: env.py
alembic/versions/: 2645b9b0ca7d_chats_tables_added.py  49b5e656e4d6_messages_table_edited_2.py  58c58651f60a_chats_tables_added.py  758f4892d0ac_initial_migration.py  80672ed052d0_added_chats_users_intemediate_table.py  887bf0de3cbb_added_chats_users_intemediate_table.py  97a9011a4ecf_chats_tables_added.py  b30c81f597ac_messages_table_edited_2.py  baae501d10dc_messages_table_edited.py  eb8988501778_added_chats_users_intemediate_table.py  fa66bd37829d_initial_migration.py
apps/auth/api/v1/: api.py
apps/auth/api/v1/routers/: auth_service.py
apps/auth/models/: __init__.py  auth_service.py
apps/auth/schemas/: auth.py
apps/auth/services/: auth_service.py  dependencies.py
apps/chats/api/v1/: api.py
apps/chats/api/v1/routers/: chats.py  ws_chats.py
apps/chats/models/: __init__.py  chats.py
apps/chats/schemas/: chats.py
apps/chats/services/: chats.py
apps/chats/tests/: test_routes.py
apps/core/: config.py  logger.py  setup.py
apps/db/: __init__.py
apps/mq/: connection.py  consumer.py  publisher.py
apps/users/: __init__.py
apps/users/api/v1/: api.py
apps/users/api/v1/routers/: users.py
apps/users/models/: __init__.py  users.py
apps/users/schemas/: users.py  utils.py
apps/users/services/: base.py  users.py
apps/users/tests/: test_routes.py
